--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -49,14 +49,14 @@
           fab:fab_icon="@drawable/ic_share_grey600_36dp"
           fab:fab_title="分享"/>
 
-      <com.getbase.floatingactionbutton.FloatingActionButton
-          android:id="@+id/detailed_action_favorite"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          fab:fab_colorNormal="@color/icons"
-          fab:fab_colorPressed="@color/divider"
-          fab:fab_icon="@drawable/ic_favorite_grey600_24dp"
-          fab:fab_title="收藏"/>
+      <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
+          <!--android:id="@+id/detailed_action_favorite"-->
+          <!--android:layout_width="wrap_content"-->
+          <!--android:layout_height="wrap_content"-->
+          <!--fab:fab_colorNormal="@color/icons"-->
+          <!--fab:fab_colorPressed="@color/divider"-->
+          <!--fab:fab_icon="@drawable/ic_favorite_grey600_24dp"-->
+          <!--fab:fab_title="收藏"/>-->
 
       <com.getbase.floatingactionbutton.FloatingActionButton
           android:id="@+id/detailed_action_settings"
