--- a/app/src/main/res/layout/adapter_messagelist.xml
+++ b/app/src/main/res/layout/adapter_messagelist.xml
@@ -56,20 +56,32 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:orientation="vertical" android:layout_marginBottom="4dp">
-            <TextView
-                android:id="@+id/item_starttime"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
-                android:text="起始时间：2015.11.10.14：02"
-                android:textSize="14sp"/>
-            <TextView
-                android:id="@+id/item_endtime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
-                android:text="截止时间：2015.11.10.14：02"
-                android:textSize="14sp"/>
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/item_starttime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:text="起始时间：2015.11.10.14：02"
+                    android:textSize="14sp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:text="---"
+                    />
+                <TextView
+                    android:id="@+id/item_endtime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:text="截止时间：2015.11.10.14：02"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
