--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -4,18 +4,11 @@
     tools:context=".HomeActivity">
     <item
         android:id="@+id/message"
-        android:showAsAction="ifRoom"
+        android:showAsAction="always"
         android:orderInCategory="0"
+        android:icon="@drawable/message"
         android:title="消息"
         />
-    <item
-      android:id="@+id/action_night_mode"
-        android:orderInCategory="1"
-      android:title="@string/settings_night_mode_night"/>
 
-     <item
-      android:id="@+id/action_settings"
-         android:orderInCategory="2"
-      android:title="@string/action_settings"/>
 
 </menu>
