--- a/app/src/main/res/layout/adapter_messagelist.xml
+++ b/app/src/main/res/layout/adapter_messagelist.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<view xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:test="http://schemas.android.com/tools"
     class="android.support.v7.widget.CardView"
@@ -9,7 +9,9 @@
     android:id="@+id/item_card_holder"
     app:cardElevation="4dp"
     app:cardCornerRadius="@dimen/cardview_default_radius"
-    android:theme="@style/CardView.Light">
+    android:theme="@style/CardView.Light"
+    >
+
 
     <LinearLayout
         android:paddingTop="6dp"
@@ -94,5 +96,5 @@
     </LinearLayout>
 
 
-</view>
+</android.support.v7.widget.CardView>
 
