--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -62,7 +62,7 @@
                 android:layout_marginBottom="16dp"
                 android:layout_marginLeft="16dp"
                 android:ellipsize="marquee"
-                android:text="请登陆"
+                android:text="请登录"
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:textColor="@android:color/white"/>
           </LinearLayout>
