--- a/app/src/main/res/menu/menu_message.xml
+++ b/app/src/main/res/menu/menu_message.xml
@@ -4,13 +4,13 @@
     tools:context="cn.edu.cqupt.nmid.headline.ui.activity.SettingsActivity">
     <item
         android:id="@+id/message_send"
-        android:icon="@drawable/newmessage"
+        android:icon="@drawable/sendmessage"
         android:title="新信息"
         android:orderInCategory="100"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/message_setting"
-        android:icon="@drawable/setting"
+        android:icon="@drawable/resetaccount"
         android:title="设置"
         android:orderInCategory="100"
         app:showAsAction="ifRoom" />
